--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -2,6 +2,20 @@
     <div class="main-container">
         <main>
             <div class="post-stream-container">
+			<!-- require APlayer -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
+<script src="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.js"></script>
+<!-- require MetingJS -->
+<script src="https://cdn.jsdelivr.net/npm/meting@2/dist/Meting.min.js"></script>
+
+<meting-js
+	server="netease"
+	type="playlist"
+	id="7664165148"
+	autoplay="false"
+	list-folded="true"
+	fixed="false">
+</meting-js>
                 <!-- # Post List # -->
                 <% page.posts.each(function(post) { %>
                     <% if(!((typeof hasposttop === 'function') && post.top)) { %>
